[gd_scene load_steps=11 format=3 uid="uid://cuej5ryifr164"]

[ext_resource type="Texture2D" uid="uid://cdr4ro16ljvi5" path="res://Assets/pp_assets/arts/background.jpg" id="1_hp74f"]
[ext_resource type="PackedScene" uid="uid://cqbhdd3f3ysqn" path="res://Games/ping_pong/pp_player.tscn" id="2_x01ca"]
[ext_resource type="Script" uid="uid://twnu4hd5yb43" path="res://Games/ping_pong/scripts/pp_player.gd" id="3_day0s"]
[ext_resource type="PackedScene" uid="uid://c80st638uowc8" path="res://Games/ping_pong/pp_computer.tscn" id="3_p81ul"]
[ext_resource type="PackedScene" uid="uid://bgsliavl2kr2u" path="res://Games/ping_pong/ball.tscn" id="4_ec0xc"]
[ext_resource type="Script" uid="uid://bxqi2oc3x6whx" path="res://Games/ping_pong/scripts/pp_computer.gd" id="4_mxgn3"]
[ext_resource type="Script" uid="uid://qe7u2dgdar7d" path="res://Games/ping_pong/scripts/ball.gd" id="5_cp50h"]
[ext_resource type="PackedScene" uid="uid://i3uo1tqj0yob" path="res://Games/ping_pong/wall.tscn" id="9_p63tb"]
[ext_resource type="Script" uid="uid://dj606ct7uo4ou" path="res://Games/ping_pong/timer_label.gd" id="10_g2848"]
[ext_resource type="Texture2D" uid="uid://bl10pbij7t6ge" path="res://Assets/Paddle/paddle.png" id="10_rod25"]

[node name="PingPong" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -256.0
offset_right = 20.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hp74f")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(580.781, 309)
rotation = 1.5708
scale = Vector2(0.1875, 4.52172)
texture = ExtResource("10_rod25")

[node name="player" parent="." instance=ExtResource("2_x01ca")]
position = Vector2(561, 623)
scale = Vector2(1.5, 1.5)
script = ExtResource("3_day0s")

[node name="computer" parent="." instance=ExtResource("3_p81ul")]
position = Vector2(550, 38)
script = ExtResource("4_mxgn3")

[node name="Ball" parent="." instance=ExtResource("4_ec0xc")]
position = Vector2(540, 308)
script = ExtResource("5_cp50h")

[node name="left" parent="." instance=ExtResource("9_p63tb")]
position = Vector2(-3, 77)

[node name="right" parent="." instance=ExtResource("9_p63tb")]
position = Vector2(1159, 86)

[node name="top" parent="." instance=ExtResource("9_p63tb")]
position = Vector2(585, 13)
rotation = 1.5708

[node name="bottom" parent="." instance=ExtResource("9_p63tb")]
position = Vector2(579, 629)
rotation = 1.5708

[node name="PlayerScore" type="Label" parent="."]
layout_mode = 0
offset_left = 923.0
offset_top = 567.0
offset_right = 1071.0
offset_bottom = 609.0
theme_override_font_sizes/font_size = 30
text = "Player "

[node name="ComputerScore" type="Label" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 32.0
offset_right = 1125.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "Computer "

[node name="logout" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 583.0
offset_right = 108.0
offset_bottom = 623.0
text = "⬅️ logout"

[node name="AdaptRom" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 585.0
offset_right = 277.0
offset_bottom = 616.0
text = "Adapt PROM"
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("10_g2848")

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_left = 14.0
offset_top = 38.0
offset_right = 107.0
offset_bottom = 64.0

[connection signal="ready" from="player" to="player" method="_on_ready"]
[connection signal="ready" from="computer" to="computer" method="_on_ready"]
[connection signal="ready" from="Ball" to="Ball" method="_on_ready"]
[connection signal="pressed" from="logout" to="player" method="_on_logout_pressed"]
[connection signal="toggled" from="AdaptRom" to="player" method="_on_adapt_rom_toggled"]
